feat: initialize test-frontend project with React and Vite
- Added package.json with dependencies and scripts for development, build, linting, and preview.
- Included Vite logo SVG in the public directory.
- Created main application component (App.jsx) to fetch and display user data from the backend.
- Added React logo SVG in the assets directory.
- Set up main entry point (main.jsx) for the React application.
- Configured Vite with a proxy for API requests to the backend server.

--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "server",
+  "name": "backend",
   "version": "1.0.0",
-  "type": "module",
   "main": "index.js",
   "type": "module",
   "scripts": {
@@ -12,15 +11,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-<<<<<<< HEAD:backend/package.json
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "mongoose": "^8.19.3",
-=======
-    "cors": "^2.8.5",
-    "express": "^5.1.0",
-    "mongoose": "^8.19.2",
->>>>>>> 6efaedf6e065af7a7819bd9b0bebc4c0cf495cb8:server/package.json
     "nodemon": "^3.1.10"
   },
   "description": ""
