feat: add .env file for MongoDB connection and update .gitignore to exclude it

--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -2,7 +2,7 @@ create a gitignore file for a backend project
 # Node.js dependencies  
 node_modules/
 # Environment variables
-.env
+#.env
 # Logs  
 logs/
 *.log
