--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -1,44 +1,24 @@
-create a gitignore file for a backend project
-# Node.js dependencies  
-node_modules/
-# Environment variables
-.env
-# Logs  
-logs/
+# Logs
+logs
 *.log
 npm-debug.log*
 yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
 
-# Build output
-dist/
-build/
-# Temporary files
-tmp/
-# OS generated files
-.DS_Store   
-Thumbs.db
-# IDE specific files
-.vscode/
-.idea/  
-# Coverage directory
-coverage/
-# Database files
-*.sqlite
-*.db
-# Uploaded files
-uploads/
-# Dependency directories
-bower_components/
-# Miscellaneous
-*.swp
-*.swo
-*.bak
-*.tmp
-# Docker files
-docker-compose.override.yml
-# PM2 process files
-pm2.pid
-pm2.log
-# Yarn integrity file
-.yarn-integrity
-# Parcel cache
+node_modules
+dist
+dist-ssr
+*.local
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
